# CuTeDSL-from-scratch

./: .gitignore  README.md  pyproject.toml  roadmap.md
puzzles/: 01_layout_basics.py  02_hierarchical_layouts.py  03_tiling.py  04_first_kernel.py  05_bounds_checking.py
